--- a/subdir/test.config
+++ b/subdir/test.config
@@ -1,5 +1,1 @@
-Œ¥/åÆð`Éh:ôÂrý~Z
-Hv˜‡/ÏõVIU7YH
-e
-O5Ðú×ãÙ,7Ñ”«+¢l,Ê)>qÄÆz8]ÞžUR£ç¦¯	£Å
-@j²…¬?´úI¶µ‡O_Ã-Ø˜Ó>”¤Ü¤[µÇ?|à>øŸª[Øß³ëeÇ¹cC+ ò·L
+Œ›¸4ÙT«G`É=7vÝû…CÔð!_\K0GÑ‚/adájßMÞå¸]5­¥º1¯çºEVá;ŠW™aß€¸„uõò'7Ný%¥Á
