--- a/subdir/test.config
+++ b/subdir/test.config
@@ -1,1 +1,1 @@
-Another Test Config
+Њ)®qлRР`Й#одъ%Jєц‰Юґо±aЫ—?;з·HJaОМ]g=Меgа«(б$A§_]LЄФ¦НTЇфKу(ИgiЪВWИ–¦ ЩzpkРdю кh·'ЙГщoNъEЈtєOэАЋЦJEЯ2Ы¦хІЃЂ(ЕjхjVЧЛ©Й:
