--- a/subdir/test.config
+++ b/subdir/test.config
@@ -1,2 +1,1 @@
-Dע€YֶVt`ֹ>5~­ַ&©ku־ז¡9רa›·ÜaÙו6סחא8ײצָ}—ל°k_₪½&<B
-¬בךֻÿ™§hׂ“¦c
+®“§ֻZ(`ֹ>0Nu¶„נ)±[HךMמבב @א|†₪³!¦…(שYךrM<זwv¬\C3[¢Fd0qטUַ„&-«)O
